# Twin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: prod-verify.md  uat-deploy.md  uat-verify.md
docs/: dws-agent-设计方案.html  dws-agent-设计方案.md  dws-只读接口校准.md  uat-环境清单.md  会话记录-钉钉Agent设计.html  会话记录-钉钉Agent设计.md  复盘-2026-06-23.md  复盘-2026-06-25.md
docs/archive/: kdl-数据接入方案.md
docs/design/: 方案-MVP.md
docs/design/md/: agent-编排与执行.md  kdl-知识库.md  (+4 more)
docs/ops/: uat-环境清单.md
docs/releases/: accessScope上线清单-2026-07-01.md  用户行为看板上线清单-2026-07-03.md
docs/retro/: 复盘-2026-06-24.md  复盘-2026-06-25.md  复盘-2026-06-30.md  复盘-2026-07-03.md  复盘-2026-07-06.md
docs/verify/: 2026-06-25-顶下线-E2E验收.md  uat1-E2E验收报告-2026-07-01.md  uat1-E2E验收报告-2026-07-02-scope-hotfix.md
scripts/: feedback_patrol.env.example  feedback_patrol.py  feedback_patrol.sh  kdl_acceptance.py  kdl_dedup_docs.py  kdl_fetch_docs.py  kdl_ingest.py  ks_logs.py  render_design_html.py  send_mvp.py  triage_mvp.py  uat.env.example  uat_login.py
scripts/docs/: render_design_html.py
scripts/kdl/: kdl_review.py
scripts/ops/: feedback_patrol.sh  ks_logs.py
src/dws_agent/: README.md  __init__.py
tests/: conftest.py  kdl_helpers.py  test_cli.py  test_confirm_token.py  test_executor_e2e.py  test_kdl_abstain.py  test_kdl_cli_status.py  test_kdl_freshness_code.py  test_kdl_ingest_drop.py  test_kdl_no_side_effects.py  test_kdl_provenance.py  test_kdl_qa_pairing.py  test_kdl_redaction_taint.py  test_policy_classify.py  test_privacy_filter.py  test_refresh_guard.py  test_shim_token.py
tests/mock/: dws
(+56 files in other folders)
